# openEV_round1

./: .env.example  .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
envs/: __init__.py  environment.py  graders.py  models.py  tasks.py
scripts/: precheck.ps1
server/: __init__.py  app.py
